# fast-chat

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
migrations/: 20240502144457_add_user_table.sql  20240504111027_create_message_table.sql  20240518073151_create_room_table.sql  20240518073928_create_rooms_user_table.sql
scripts/: init_db.sh
src/: configuration.rs  db.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/crypt/: hash.rs  token.rs
src/graphql/: handlers.rs  mod.rs  root.rs
src/graphql/room/: schema.rs
src/graphql/user/: mod.rs  schema.rs  validators.rs
src/service/: mod.rs  stream.rs  worker.rs
src/sql/: message.rs  room.rs  user.rs
src/ws/: mod.rs  schema.rs  ws.rs
tests/: health_check.rs
