[package]
name = "fast-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = [
    "chrono",
] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
env_logger = "0.11.2"
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.11.0"
validator = "0.16.1"
thiserror = "1.0.57"
argon2 = "0.5.3"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
serde_json = "1.0.114"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
futures-util = "0.3.30"
redis = { version = "0.25.2", features = ["tokio-comp", "aio", "connection-manager"] }
config = "0.14.0"
derivative = "2.2.0"
strum_macros = "0.26.2"

[dev-dependencies]
reqwest = "0.11.24"
